name: gloss-starter
version: 0.1
synopsis: A simple graphical application.
license: BSD3
author: Ryan Trinkle and Katherine Chuang
maintainer: ryan.trinkle@gmail.com
category: Graphics
build-type: Simple
cabal-version: >=1.10

executable gloss-starter
  main-is: Main.hs
  build-depends: base >=4.6 && <4.7
               , gloss >= 1.8.0.1 && < 1.9
  default-language: Haskell2010
